objects/SolutionsManifest__c/SolutionsManifest__c.object-meta.xml
<CustomObject>
    <label>SolutionsManifest</label>
    <nameField>
        <label>SolutionsManifest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SolutionsManifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>