objects/SolutionsManifest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SolutionsManifests</relationshipLabel>
    <relationshipName>SolutionsManifests</relationshipName>
    <type>Lookup</type>
</CustomField>