objects/SolutionsManifest__c/fields/GSFileLink_Id__c.field-meta.xml
<CustomField>
    <fullName>GSFileLink_Id__c</fullName>
    <description>This is the ID of the JBCXM__GSFileLink__c JSON file that contains the solutions manifest JSON (usually gathered via TPAN)</description>
    <label>GSFileLink__Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>