objects/SolutionsManifest__c/fields/is_current__c.field-meta.xml
<CustomField>
    <fullName>is_current__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this a current solutions manifest</description>
    <label>is_current</label>
    <type>Checkbox</type>
</CustomField>