objects/SolutionsManifest__c/fields/ServerDeployment__c.field-meta.xml
<CustomField>
    <fullName>ServerDeployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The server environment the Solutions Manifest is for.</description>
    <label>Server Deployment</label>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>SolutionsManifests</relationshipLabel>
    <relationshipName>SolutionsManifests</relationshipName>
    <type>Lookup</type>
</CustomField>